force-app/main/default/objects/OrderItem/fields/DSales_Cantidad_de_Servicio__c.field-meta.xml
<CustomField>
    <fullName>DSales_Cantidad_de_Servicio__c</fullName>
    <label>Cantidad de Servicio</label>
    <length>2</length>
    <type>Text</type>
</CustomField>