force-app/main/default/objects/OrderItem/fields/DSales_Descuento_de_Servicio__c.field-meta.xml
<CustomField>
    <fullName>DSales_Descuento_de_Servicio__c</fullName>
    <label>Descuento de Servicio</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>