force-app/main/default/objects/OrderItem/fields/DSales_Fecha_de_entrega_estimada__c.field-meta.xml
<CustomField>
    <fullName>DSales_Fecha_de_entrega_estimada__c</fullName>
    <label>Fecha de entrega estimada</label>
    <length>10</length>
    <type>Text</type>
</CustomField>