force-app/main/default/objects/OrderItem/fields/DSales_Precio_por_producto__c.field-meta.xml
<CustomField>
    <fullName>DSales_Precio_por_producto__c</fullName>
    <label>Precio por producto</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>