force-app/main/default/objects/OrderItem/fields/DSales_Servicio__c.field-meta.xml
<CustomField>
    <fullName>DSales_Servicio__c</fullName>
    <label>Servicio</label>
    <length>30</length>
    <type>Text</type>
</CustomField>