force-app/main/default/objects/OrderItem/fields/DSales_SKU__c.field-meta.xml
<CustomField>
    <fullName>DSales_SKU__c</fullName>
    <label>SKU</label>
    <length>10</length>
    <type>Text</type>
</CustomField>