force-app/main/default/objects/OrderItem/fields/DSales_Tipo__c.field-meta.xml
<CustomField>
    <fullName>DSales_Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tangible</fullName>
            </value>
            <value>
                <fullName>Intangible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>