force-app/main/default/objects/OrderItem/fields/DSales_Vigencia__c.field-meta.xml
<CustomField>
    <fullName>DSales_Vigencia__c</fullName>
    <label>Vigencia</label>
    <length>10</length>
    <type>Text</type>
</CustomField>